# chromium-kiosk

./: .gitignore  .gitlab-ci.yml  .version.yml  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements.txt  setup.py  startkiosk.sh  stdeb.cfg  version.py
.docs/: README.md
archlinux/: PKGBUILD  PKGBUILD.tmpl  chromium_kiosk.install  compile.py  granad_kiosk.install
chromium-kiosk-extension/: README.md  angular.json  build.sh  karma.conf.js  package-lock.json  package.json  tsconfig.json  tslint.json
chromium-kiosk-extension/src/: background.ts  blocked_frame.html  main.ts  manifest.json  styles.scss
chromium-kiosk-extension/src/app/: app-config.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
chromium-kiosk-extension/src/app/components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.spec.ts  navbar.component.ts
chromium-kiosk-extension/src/app/components/screensaver/: screensaver.component.html  screensaver.component.scss  screensaver.component.spec.ts  screensaver.component.ts
chromium-kiosk-extension/src/app/components/virtual-keyboard/: layouts.ts  virtual-keyboard-global.component.ts  virtual-keyboard-key.component.ts  virtual-keyboard.component.html  virtual-keyboard.component.scss  virtual-keyboard.component.spec.ts  virtual-keyboard.component.ts  virtual-keyboard.directive.ts  virtual-keyboard.service.ts
chromium-kiosk-extension/src/app/core/: settings.ts  tools.ts
chromium-kiosk-extension/webpack/: webpack.config.js  webpack.dev.js
chromium_kiosk/: Chromium.py  IBrowser.py  Qiosk.py  Screensaver.py  __main__.py  config.py  tools.py
chromium_kiosk/enum/: RotationEnum.py
chromium_kiosk/tools/: TouchDevice.py  Wayland.py  WindowSystem.py  X11.py  __init__.py
debian/: chromium-kiosk.postinst  chromium-kiosk.tmpfiles  python3-chromium-kiosk.postinst
etc/chromium-kiosk/: config.yml
etc/granad-kiosk/: config.yml
etc/systemd/system/getty@tty1.service.d/: override.conf
examples/: qiosk-control.py
granad_kiosk/: Chromium.py  __init__.py  __main__.py  config.py  tools.py
lib/systemd/system/: chromium-kiosk_configwatcher.service
tests/: test_dummy.py
usr/lib/systemd/system/: chromium-kiosk_configwatcher.service
usr/lib/sysusers.d/: chromium-kiosk.conf
usr/lib/tmpfiles.d/: chromium-kiosk.conf
var/lib/chromium-kiosk/: .bash_profile  .xinitrc
(+2 files in other folders)
